Adjust demo links

--- a/demo.html
+++ b/demo.html
@@ -95,24 +95,24 @@
                 <section>
                     <h4>Using a single <code>t</code> parameter</h4>
                     <p class="small"><code class="url">.../demo.html?t=dogs</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?t=dogs">demo.html?t=dogs</a></p>
+                    <p class="small">Test it here now: <a href="?t=dogs">demo.html?t=dogs</a></p>
                 </section>
                 <section>
                     <h4>Using multiple <code>t</code> parameters</h4>
                     <p class="small"><code class="url">.../demo.html?t=dogs,cats</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?t=dogs,cats">demo.html?t=dogs,cats</a></p>
+                    <p class="small">Test it here now: <a href="?t=dogs,cats">demo.html?t=dogs,cats</a></p>
                 </section>
                 <section>
                     <h4>Using more specific <code>t</code> parameters</h4>
                     <p class="small">Use the plus sign to be more specific. <br>In this case we want all dogs, but only small cats.</p>
                     <p class="small"><code class="url">.../demo.html?t=dogs,cats+small</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?t=dogs,cats+small">demo.html?t=dogs,cats+small</a></p>
+                    <p class="small">Test it here now: <a href="?t=dogs,cats+small">demo.html?t=dogs,cats+small</a></p>
                 </section>
                 <section>
                     <h4>Using more specific <code>t</code> parameters</h4>
                     <p class="small">This works with nested tags as well.</p>
                     <p class="small"><code class="url">.../demo.html?t=small+cats,nice+horses</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?t=small+cats,nice+horses">demo.html?t=small+cats,nice+horses</a></p>
+                    <p class="small">Test it here now: <a href="t=small+cats,nice+horses">demo.html?t=small+cats,nice+horses</a></p>
                 </section>
             </section>
             <section data-name="Names" data-tag="intro">
@@ -124,12 +124,12 @@
                     <h4>Using an <code>n</code> parameter</h4>
                     <p class="small">There are two named stacks with vertical slides. Now we only want the first (data-name="Brown") stack.</p>
                     <p class="small"><code class="url">.../demo.html?n=brown</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?n=brown">demo.html?n=brown</a></p>
+                    <p class="small">Test it here now: <a href="?n=brown">demo.html?n=brown</a></p>
                 </section>
                 <section>
                     <h4>Using multiple <code>n</code> parameters</h4>
                     <p class="small"><code class="url">.../demo.html?n=brown,black+%26+white</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?n=brown,black+%26+white">demo.html?n=brown,black+%26+white</a></p>
+                    <p class="small">Test it here now: <a href="?n=brown,black+%26+white">demo.html?n=brown,black+%26+white</a></p>
                 </section>
             </section>
             <section data-name="Groups" data-tag="intro">
@@ -159,7 +159,7 @@
                 <section>
                     <h4>Using a <code>g</code> parameter</h4>
                     <p class="small"><code class="url">.../demo.html?g=brownpets</code></p>
-                    <p class="small">Test it here now: <a href="demo.html?g=brownpets">demo.html?g=brownpets</a></p>
+                    <p class="small">Test it here now: <a href="?g=brownpets">demo.html?g=brownpets</a></p>
                 </section>
                 <section>
                     <h4>Setting the <code>mandatorygroup</code> option</h4>
@@ -181,7 +181,7 @@
                     <h4>Using a correct <code>g</code> parameter</h4>
                     <p class="small">With <code>mandatorygroup : true</code> and a correct g parameter, the slides will show.</p>
                     <p class="small"><code class="url">.../demo-m.html?g=brownpets</code></p>
-                    <p class="small">Test it here now: <a href="demo-m.html?g=brownpets">demo-m.html?g=brownpets</a></p>
+                    <p class="small">Test it here now: <a href="g=brownpets">demo-m.html?g=brownpets</a></p>
                 </section>
                 <section>
                     <h4>Using an incorrect <code>g</code> parameter</h4>
@@ -202,8 +202,8 @@
                 <section data-tag="horses">Horse (black &amp; white)</section>
             </section>
             <section data-mandatory>There is no correct URL parameter set</section>
-            <section data-tag="tagteam" data-state="hide-menubar">
-                <p>Thanks for trying out Tagteam!</p>
+            <section data-tag="tagteam" data-state="hide-menubar" data-visibility="hidden">
+                <p>Thanks for trying out Tagteam! <br>Star it if you like it :-)</p>
             </section>
             <section data-tag="keep" data-state="hide-menubar">Go <a href="demo.html">back to the start</a></section>
         </div>
