Change transition to 'slide'

--- a/demo.html
+++ b/demo.html
@@ -214,7 +214,7 @@
     <script src="plugin/highlight/highlight.js"></script>
     <script>
         Reveal.initialize({
-            transition: "convex",
+            transition: "slide",
             history: true,
             simplemenu: {
                 selectby: "data-name",
