--- a/demo-m.html
+++ b/demo-m.html
@@ -43,7 +43,7 @@
     <script src="plugin/highlight/highlight.js"></script>
     <script>
         Reveal.initialize({
-            transition: "convex",
+            transition: "slide",
             history: true,
             tagteam: {
                 groups: {
